--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.7.3",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
     "@typechain/ethers-v5": "^9.0.0",
     "@types/chai": "^4.2.21",
@@ -38,10 +38,10 @@
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
     "hardhat-gas-reporter": "^1.0.4",
-    "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.27",
+    "prettier": "^2.3.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "progress": "^2.0.3",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^9.1.0",
@@ -53,7 +53,8 @@
     "@typechain/hardhat": "^4.0.0",
     "@types/cli-progress": "^3.9.0",
     "@types/node": "^14.14.11",
-    "@types/progress": "^2.0.5"
+    "@types/progress": "^2.0.5",
+    "erc721a": "^4.2.2"
   },
   "scripts": {
     "ci-test": "NODE_ENV=test && hardhat test ",
